# NovauRust

./: Cargo.toml  README.md
Engine/: Cargo.toml
Engine/src/: Application.rs  Camera.rs  CameraController.rs  Input.rs  Novaura.rs  OpenGLContext.rs  State.rs  StateMachine.rs  Window.rs  lib.rs
Engine/src/Renderer/: IRenderer.rs  IndexBuffer.rs  Renderer.rs  Shader.rs  SimpleRenderer.rs  VertexArray.rs  VertexBuffer.rs  VertexData.rs  mod.rs
src/: main.rs  myMod.rs
src/Sandbox/: Level.rs  mod.rs
