[package]
name = "Novaura"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]




[dependencies]

Engine = { path = "Engine/" }
spdlog-rs = "0.3"
beryllium = { version = "0.2.0-alpha.1", default-features = false, features = ["link_static"] }

#beryllium = "0.2.0-alpha.2"
